refactor: reorganize generate scripts into dispatcher pattern
- Add `pnpm generate:db <engine>` for creating test databases with sample data
- Add `pnpm generate:backup <engine>` for generating backup fixtures
- Support all 16 engines with aliases (e.g., pg, postgres → postgresql)
- Move qdrant snapshot script to new location
- Add shared utilities module for common functionality
- Fix redis/valkey ready check to use exit code instead of stdout parsing
- Document new scripts in CHEATSHEET.md

--- a/.gitignore
+++ b/.gitignore
@@ -155,7 +155,7 @@ _dumps
 *.duckdb
 *.duckdb.wal
 
-# Qdrant snapshots (too large for git - use generate:qdrant-snapshot to create on demand)
+# Qdrant snapshots (too large for git - use `pnpm generate:backup qdrant` to create on demand)
 tests/fixtures/qdrant/snapshots/*.snapshot
 
 # Private docs
