--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "test:docker": "bash tests/docker/run-docker-test.sh",
     "generate:backup": "tsx scripts/generate/backup/index.ts",
     "generate:db": "tsx scripts/generate/db/index.ts",
+    "generate:missing": "tsx scripts/generate/missing-databases.ts",
+    "delete:demos": "tsx scripts/generate/delete-demos.ts",
     "format": "prettier --write .",
     "lint": "tsc --noEmit && eslint .",
     "prepare": "husky"
