--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -788,7 +788,7 @@ jobs:
             label: macOS ARM64
           - os: windows-latest
             icon: 🪟
-            label: Windows x64
+            label: Win x64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -860,7 +860,7 @@ jobs:
             label: macOS ARM64
           - os: windows-latest
             icon: 🪟
-            label: Windows x64
+            label: Win x64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -930,7 +930,7 @@ jobs:
             label: macOS ARM64
           - os: windows-latest
             icon: 🪟
-            label: Windows x64
+            label: Win x64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -1086,7 +1086,7 @@ jobs:
             label: macOS ARM64
           - os: windows-latest
             icon: 🪟
-            label: Windows x64
+            label: Win x64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -1170,7 +1170,7 @@ jobs:
             label: macOS ARM64
           - os: windows-latest
             icon: 🪟
-            label: Windows x64
+            label: Win x64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
