fix: correct CI platform coverage and add linux-arm64 smoke test
- Replace macos-15 (ARM64) with macos-15-intel for actual darwin-x64 testing
- Add ubuntu-22.04 to all engine tiers (hostdb binaries aren't consistent)
- Add Docker QEMU ARM64 smoke test job for linux-arm64 binary validation
- Enable full CI on dev branch push, exclude dev from ci-fast
- Update TESTING_STRATEGY.md and ENGINE_CHECKLIST.md to reflect coverage
- All 5 platform-arch combos now tested: linux-x64, linux-arm64, darwin-x64,
  darwin-arm64, win32-x64

--- a/.github/workflows/ci-fast.yml
+++ b/.github/workflows/ci-fast.yml
@@ -2,7 +2,7 @@ name: CI Fast
 
 on:
   push:
-    branches-ignore: [main]
+    branches-ignore: [main, dev]
 
 # Cancel in-progress runs when a new run is triggered
 concurrency:
