--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -7,26 +7,21 @@ on:
     - cron: '0 2 * * 0'
 
 # =============================================================================
-# OS Coverage Strategy
+# OS Coverage Strategy (Full Matrix)
 # =============================================================================
-# We test on 5 OS variants to cover different platforms and architectures:
-#   - ubuntu-22.04 (x64) - LTS with older glibc/system libraries
-#   - ubuntu-24.04 (x64) - LTS with newer libraries (catches issues like libaio rename)
-#   - macos-15 (Intel x64) - Sequoia
-#   - macos-14 (ARM64/Apple Silicon) - Sonoma
-#   - windows-latest (x64)
+# Tests on 5 runners covering 4 unique platform-arch combos:
+#   - ubuntu-22.04 (linux-x64) - LTS with older glibc/system libraries
+#   - ubuntu-24.04 (linux-x64) - LTS with newer libraries (catches libaio rename)
+#   - macos-15-intel (darwin-x64) - macOS Intel (available until Aug 2027)
+#   - macos-14 (darwin-arm64) - macOS Apple Silicon
+#   - windows-latest (win32-x64)
 #
-# Note: We test two Ubuntu versions instead of Linux ARM64 because:
-#   1. GitHub Actions doesn't offer free native Linux ARM64 runners
-#   2. QEMU emulation is too slow and flaky for CI
-#   3. Two Ubuntu LTS versions catch real library compatibility issues
-#   4. macOS ARM64 validates ARM code paths
-#   5. A commented-out ARM64 job exists below if native runners become available
+# Note: macos-14 and macos-15 are BOTH ARM64 runners. To test darwin-x64
+# you must use macos-15-intel (or the deprecated macos-13).
 #
-# Windows Strategy:
-# Windows tests run in parallel within each engine's matrix (windows-latest).
-# A sequential test-windows-all job is commented out below as a fallback if
-# parallel Windows jobs ever exhaust the runner pool again.
+# Not tested (no free GitHub Actions runners available):
+#   - linux-arm64: QEMU is too slow/flaky; macOS ARM64 validates ARM code paths
+#   - win32-arm64: Not supported by hostdb
 # =============================================================================
 
 # Cancel in-progress runs when a new run is triggered
@@ -51,7 +46,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -148,7 +143,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -212,7 +207,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -274,7 +269,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -354,7 +349,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -415,7 +410,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -476,7 +471,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -539,7 +534,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -618,7 +613,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -680,7 +675,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -744,7 +739,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -821,7 +816,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -899,7 +894,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -975,7 +970,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -1052,7 +1047,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -1143,7 +1138,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -1233,7 +1228,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
@@ -1326,7 +1321,7 @@ jobs:
           - os: ubuntu-24.04
             icon: 🐧
             label: Linux x64 24.04
-          - os: macos-15
+          - os: macos-15-intel
             icon: 🍎
             label: macOS x64
           - os: macos-14
