fix: increase ARM64 QEMU timeouts for Docker E2E smoke tests
QEMU emulation is 5-10x slower than native; engines with 30-90s
internal waitForReady were getting killed. Make START_TIMEOUT
configurable via environment variable and increase the GitHub Actions
job timeout to 90 minutes.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2212,8 +2212,14 @@ jobs:
         timeout-minutes: 30
 
       - name: Run ARM64 smoke tests
-        run: docker run --rm --platform linux/arm64 spindb-e2e-arm64
-        timeout-minutes: 60
+        # QEMU emulation is ~5-10x slower than native; increase timeouts so
+        # engines with 30-90s internal waitForReady don't get killed.
+        run: |
+          docker run --rm --platform linux/arm64 \
+            -e START_TIMEOUT=600 \
+            -e STARTUP_TIMEOUT=180 \
+            spindb-e2e-arm64
+        timeout-minutes: 90
 
   # ============================================
   # Docker Export Test - Tests the `spindb export docker` functionality
