feat: add TypeDB engine support
Add TypeDB as the 17th database engine in SpinDB. Includes full lifecycle
support: create, start, stop, seed, query, backup, restore, clone, rename,
delete. TypeDB v3.8.0 with TypeQL query language, Rust-native binary,
config.yml per container, and separate console binary.

Key implementation details:
- Port 1729 (main) + HTTP port 8000 (main + 6271) per container
- Console --command only works for standalone commands (database create/delete/export/import)
- Transaction-based queries use temp .tqls script files with --script flag
- Config.yml regenerated on every start (paths change after rename, ports after reassignment)
- Backup creates two-file pair (-schema.typeql + -data.typeql)
- Data-driven refactors: scriptFileLabel in engines.json replaces hardcoded switch statements
- PostgreSQL default shell now uses downloaded psql binary instead of bare PATH lookup
- Container submenu trailing separator for clean list wrapping

--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -1211,6 +1211,96 @@ jobs:
           }
 
   # ============================================
+  # TypeDB Integration Tests
+  # Uses SpinDB to download and manage TypeDB binaries from hostdb
+  # TypeDB is a knowledge graph database with TypeQL query language
+  # ============================================
+  test-typedb:
+    name: TypeDB ${{ matrix.icon }} ${{ matrix.label }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: ubuntu-22.04
+            icon: 🐧
+            label: Linux x64 22.04
+          - os: ubuntu-24.04
+            icon: 🐧
+            label: Linux x64 24.04
+          - os: macos-15-intel
+            icon: 🍎
+            label: macOS x64
+          - os: macos-14
+            icon: 🍎
+            label: macOS ARM64
+          - os: windows-latest
+            icon: 🪟
+            label: Win x64
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      # Cache TypeDB binaries - these are downloaded from hostdb
+      - name: Cache TypeDB binaries
+        uses: actions/cache@v4
+        id: typedb-cache
+        with:
+          path: ~/.spindb/bin
+          key: spindb-typedb-3-${{ runner.os }}-${{ runner.arch }}
+
+      # Use SpinDB to download TypeDB binaries
+      - name: Install TypeDB via SpinDB
+        run: pnpm start engines download typedb 3
+
+      - name: Show installed engines
+        run: pnpm start engines list
+
+      - name: Run TypeDB integration tests
+        run: pnpm test:engine typedb
+        timeout-minutes: 15
+
+      - name: Show TypeDB logs on failure (Unix)
+        if: failure() && runner.os != 'Windows'
+        run: |
+          echo "=== TypeDB container directories ==="
+          ls -la ~/.spindb/containers/typedb/ 2>/dev/null || echo "No TypeDB containers directory"
+          echo ""
+          echo "=== TypeDB binary directory ==="
+          ls -la ~/.spindb/bin/ 2>/dev/null | grep -i typedb || echo "No TypeDB binaries found"
+          echo ""
+          echo "=== TypeDB log files ==="
+          find ~/.spindb/containers/typedb -name "*.log" -exec echo "--- {} ---" \; -exec cat {} \; 2>/dev/null || echo "No log files found"
+
+      - name: Show TypeDB logs on failure (Windows)
+        if: failure() && runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          Write-Host "=== TypeDB container directories ==="
+          Get-ChildItem -Path "$env:USERPROFILE\.spindb\containers\typedb" -ErrorAction SilentlyContinue | Format-Table -AutoSize
+          Write-Host ""
+          Write-Host "=== TypeDB binary directory ==="
+          Get-ChildItem -Path "$env:USERPROFILE\.spindb\bin" -ErrorAction SilentlyContinue | Where-Object { $_.Name -match 'typedb' } | Format-Table -AutoSize
+          Write-Host ""
+          Write-Host "=== TypeDB log files ==="
+          Get-ChildItem -Path "$env:USERPROFILE\.spindb\containers\typedb" -Filter "*.log" -Recurse -ErrorAction SilentlyContinue | ForEach-Object {
+            Write-Host "--- $($_.FullName) ---"
+            Get-Content $_.FullName -ErrorAction SilentlyContinue
+          }
+
+  # ============================================
   # QuestDB Integration Tests
   # Uses SpinDB to download and manage QuestDB binaries from hostdb
   # QuestDB is a high-performance time-series database with PostgreSQL wire protocol
@@ -2567,6 +2657,7 @@ jobs:
         test-cockroachdb,
         test-surrealdb,
         test-questdb,
+        test-typedb,
         test-cli-e2e,
         test-rename-clone,
         test-clickhouse-rename,
@@ -2649,6 +2740,10 @@ jobs:
           fi
           if [ "${{ needs.test-questdb.result }}" != "success" ]; then
             echo "QuestDB tests failed"
+            exit 1
+          fi
+          if [ "${{ needs.test-typedb.result }}" != "success" ]; then
+            echo "TypeDB tests failed"
             exit 1
           fi
           if [ "${{ needs.test-cli-e2e.result }}" != "success" ]; then
