fix: prevent SurrealDB hang in QEMU ARM64 CI
Add 30s timeout to binary verification (--version) in BaseBinaryManager
so no engine can hang forever. Add SKIP_ENGINES env var to run-e2e.sh
and use it to skip SurrealDB in the QEMU ARM64 job, where its large
Rust binary hangs during verification under user-mode emulation.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2304,10 +2304,13 @@ jobs:
       - name: Run ARM64 smoke tests
         # QEMU emulation is ~5-10x slower than native; increase timeouts so
         # engines with 30-90s internal waitForReady don't get killed.
+        # SurrealDB is skipped: its large Rust binary hangs during --version
+        # verification under QEMU user-mode emulation.
         run: |
           docker run --rm --platform linux/arm64 \
             -e START_TIMEOUT=600 \
             -e STARTUP_TIMEOUT=180 \
+            -e SKIP_ENGINES=surrealdb \
             spindb-e2e-arm64
         timeout-minutes: 90
 
