fix: CodeRabbit review - typos, security hardening, and cleanup
- Fix FerrertDB/Ferretdb typos in ci-full.yml comments
- Capitalize hostdb → HostDB in ENGINE_CHECKLIST.md
- Remove ENGINES_WITHOUT_USERS references from checklist (uses override detection now)
- Fix typedb-console → typedb_console_bin in engine-defaults clientTools
- Fix TypeDB server binary path (missing 'server' subdirectory) in helpers.ts
- Add mode 0o700 + chmod to ClickHouse initDataDir access directory
- Sanitize passwords in TypeDB backup/restore debug logs
- Add port validation in TypeDB restore parseConnectionString
- Fix TypeDB health check endpoint (/ → /health)
- Add null safety to TypeDB listDatabases
- Refactor TypeDB connection string validator to use regex
- Handle MySQL NO_BACKSLASH_ESCAPES sql_mode in createUser
- Replace console.log with logDebug in ClickHouse integration test
- Simplify TypeDB delete test to use engine.runScript

--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -558,7 +558,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       # Cache FerretDB binaries - includes both ferretdb AND postgresql-documentdb
-      # Version is Ferretdb 2, 4 is the cache-busting key for the CI runner only, not the FerrertDB version
+      # Version is FerretDB 2, 4 is the cache-busting key for the CI runner only, not the FerretDB version
       # Do not warn about mismatch between v2 and v4 as v4 is a cache version, not a binary version
       - name: Cache FerretDB binaries
         uses: actions/cache@v4
