docs: update ferretdb-v1 hostdb engine references
Remove references to "ferretdb-v1" as a separate hostdb engine name
in comments, docs, and CI config. Also switches FerretDB binary
manager to use fetchWithRegistryFallback for download resilience.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -658,7 +658,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      # Cache FerretDB v1 binaries - ferretdb-v1 proxy + plain PostgreSQL
+      # Cache FerretDB v1 binaries - ferretdb proxy + plain PostgreSQL
       - name: Cache FerretDB v1 binaries
         uses: actions/cache@v4
         id: ferretdb-v1-cache
