fix: socket leak, type-safe engine names, shared registry fetch utility
- Add socket.destroy() in FerretDB v1 test error handler to prevent lingering handles
- Use Engine enum instead of string literals in CockroachDB/TypeDB binary-urls.ts
- Extract multi-URL fetch loop into fetchFromRegistryUrls() in core/hostdb-client.ts
- Update CI comment to clarify FerretDB v1 supports Windows (only v2 is blocked)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,8 @@ on:
 #   windows-latest
 #
 # Exceptions:
-#   - ClickHouse, FerretDB: No Windows (no hostdb binaries) → 4 runners
+#   - ClickHouse, FerretDB v2: No Windows (no hostdb binaries) → 4 runners
+#   - FerretDB v1: All platforms including Windows (plain PostgreSQL backend)
 #   - Meilisearch on Windows: backup/restore skipped (upstream page size bug)
 #
 # Unit tests: 3 runners (ubuntu-24.04, macos-14, windows-latest)
