chore: add layerbase/docker-free keywords, remove stale supabase docs
The supabase service layer was removed previously but CLAUDE.md still referenced
the services/supabase/ directory and described the feature. Cleaned up.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "spindb",
     "postgres",
     "postgresql",
+    "postgresql-documentdb",
     "mysql",
     "mariadb",
     "database",
@@ -55,6 +56,8 @@
     "questdb",
     "typedb",
     "influxdb",
+    "layerbase",
+    "docker-free",
     "tui",
     "cli",
     "package manager"
