chore: restore individual CI workflow files
Bring back ci-fast.yml, ci-full.yml, and version-check.yml so individual
job checks are visible on PRs. Remove ci-success gateway job from ci.yml.
Remove weekly schedule from ci-full.yml (manual dispatch only). Keep
if: always() fix for ferretdb-v1.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2756,8 +2756,7 @@ jobs:
   # Uncomment this section if GitHub adds free ARM64 runners or if you have
   # access to paid larger runners. Native ARM64 is much faster than QEMU.
   #
-  # To enable: uncomment the job below and add 'test-linux-arm64' to the
-  # 'needs' array in the ci-success job at the bottom of this file.
+  # To enable: uncomment the job below.
   # ============================================
   #
   # test-linux-arm64:
@@ -2882,173 +2881,3 @@ jobs:
   #       run: pnpm test:engine clickhouse
   #       timeout-minutes: 15
 
-  # ============================================
-  # Summary Job - Ensures all tests pass
-  # ============================================
-  ci-success:
-    name: CI Success
-    runs-on: ubuntu-latest
-    needs: [
-        unit-tests,
-        test-postgresql,
-        test-mariadb,
-        test-mysql,
-        test-sqlite,
-        test-duckdb,
-        test-mongodb,
-        test-ferretdb,
-        test-ferretdb-v1,
-        test-redis,
-        test-valkey,
-        test-clickhouse,
-        test-qdrant,
-        test-meilisearch,
-        test-couchdb,
-        test-cockroachdb,
-        test-surrealdb,
-        test-questdb,
-        test-typedb,
-        test-influxdb,
-        test-cli-e2e,
-        test-rename-clone,
-        test-clickhouse-rename,
-        test-fresh-install,
-        test-upgrade,
-        test-self-update,
-        # test-windows-all,  # Commented out - using parallel Windows tests instead
-        test-docker-linux,
-        test-docker-linux-arm64,
-        test-docker-export,
-        lint,
-        hostdb-sync,
-      ]
-    if: always()
-    steps:
-      - name: Check all jobs passed
-        run: |
-          if [ "${{ needs.unit-tests.result }}" != "success" ]; then
-            echo "Unit tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-postgresql.result }}" != "success" ]; then
-            echo "PostgreSQL tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-mariadb.result }}" != "success" ]; then
-            echo "MariaDB tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-mysql.result }}" != "success" ]; then
-            echo "MySQL tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-sqlite.result }}" != "success" ]; then
-            echo "SQLite tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-duckdb.result }}" != "success" ]; then
-            echo "DuckDB tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-mongodb.result }}" != "success" ]; then
-            echo "MongoDB tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-ferretdb.result }}" != "success" ]; then
-            echo "FerretDB v2 tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-ferretdb-v1.result }}" != "success" ]; then
-            echo "FerretDB v1 tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-redis.result }}" != "success" ]; then
-            echo "Redis tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-valkey.result }}" != "success" ]; then
-            echo "Valkey tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-clickhouse.result }}" != "success" ]; then
-            echo "ClickHouse tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-qdrant.result }}" != "success" ]; then
-            echo "Qdrant tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-meilisearch.result }}" != "success" ]; then
-            echo "Meilisearch tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-couchdb.result }}" != "success" ]; then
-            echo "CouchDB tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-cockroachdb.result }}" != "success" ]; then
-            echo "CockroachDB tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-surrealdb.result }}" != "success" ]; then
-            echo "SurrealDB tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-questdb.result }}" != "success" ]; then
-            echo "QuestDB tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-typedb.result }}" != "success" ]; then
-            echo "TypeDB tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-influxdb.result }}" != "success" ]; then
-            echo "InfluxDB tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-cli-e2e.result }}" != "success" ]; then
-            echo "CLI E2E tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-rename-clone.result }}" != "success" ]; then
-            echo "Rename & Clone tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-clickhouse-rename.result }}" != "success" ]; then
-            echo "ClickHouse Rename tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-fresh-install.result }}" != "success" ]; then
-            echo "Fresh install tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-upgrade.result }}" != "success" ]; then
-            echo "Upgrade tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-self-update.result }}" != "success" ]; then
-            echo "Self-update tests failed"
-            exit 1
-          fi
-          # test-windows-all check removed - using parallel Windows tests instead
-          if [ "${{ needs.test-docker-linux.result }}" != "success" ]; then
-            echo "Docker Linux x64 tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-docker-linux-arm64.result }}" != "success" ]; then
-            echo "Docker Linux ARM64 smoke tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.test-docker-export.result }}" != "success" ]; then
-            echo "Docker Export tests failed"
-            exit 1
-          fi
-          if [ "${{ needs.lint.result }}" != "success" ]; then
-            echo "Lint check failed"
-            exit 1
-          fi
-          if [ "${{ needs.hostdb-sync.result }}" != "success" ]; then
-            echo "hostdb sync check failed"
-            exit 1
-          fi
-          echo "All CI checks passed!"
