--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -26,17 +26,17 @@ jobs:
 
       - name: Compare versions
         id: compare
+        env:
+          PR_VERSION: ${{ steps.pr_version.outputs.version }}
+          NPM_VERSION: ${{ steps.npm_version.outputs.version }}
         run: |
-          PR_VERSION="${{ steps.pr_version.outputs.version }}"
-          NPM_VERSION="${{ steps.npm_version.outputs.version }}"
-
           echo "PR version: $PR_VERSION"
           echo "npm version: $NPM_VERSION"
 
           RESULT=$(node -e "
             const semver = (v) => v.split('.').map(Number);
-            const pr = semver('$PR_VERSION');
-            const npm = semver('$NPM_VERSION');
+            const pr = semver(process.env.PR_VERSION);
+            const npm = semver(process.env.NPM_VERSION);
 
             for (let i = 0; i < 3; i++) {
               if (pr[i] > npm[i]) { console.log('greater'); process.exit(0); }
@@ -50,10 +50,13 @@ jobs:
       - name: Comment on PR if version not bumped
         if: steps.compare.outputs.result != 'greater'
         uses: actions/github-script@v7
+        env:
+          PR_VERSION: ${{ steps.pr_version.outputs.version }}
+          NPM_VERSION: ${{ steps.npm_version.outputs.version }}
         with:
           script: |
-            const prVersion = '${{ steps.pr_version.outputs.version }}';
-            const npmVersion = '${{ steps.npm_version.outputs.version }}';
+            const prVersion = process.env.PR_VERSION;
+            const npmVersion = process.env.NPM_VERSION;
 
             const [major, minor, patch] = npmVersion.split('.').map(Number);
             const patchBump = `${major}.${minor}.${patch + 1}`;
@@ -104,10 +107,13 @@ jobs:
       - name: Fail if version not bumped
         if: steps.compare.outputs.result != 'greater'
         run: |
-          echo "❌ Version must be incremented before merging"
+          echo "Version must be incremented before merging"
           exit 1
 
       - name: Success
         if: steps.compare.outputs.result == 'greater'
+        env:
+          NPM_VERSION: ${{ steps.npm_version.outputs.version }}
+          PR_VERSION: ${{ steps.pr_version.outputs.version }}
         run: |
-          echo "✅ Version check passed: ${{ steps.npm_version.outputs.version }} → ${{ steps.pr_version.outputs.version }}"
+          echo "Version check passed: $NPM_VERSION -> $PR_VERSION"
