fix: address CodeRabbit review feedback for Weaviate engine
- Fix Nerd Font glyph collision (Weaviate shared \uf14e with Qdrant, now uses \uf0e8)
- Fix createUser tracking 3 auth settings with single flag (now 4 independent flags)
- Fix Windows spawn using piped stdio (now ['ignore','ignore','ignore'] like all other engines)
- Fix redundant dynamic import in restore.ts (copyFile now static import)
- Fix CI debug step ls|grep pipe with safer glob pattern
- Update README engine counts from 18 to 19, add weaviate to engine list
- Add language specifiers to fenced code blocks in Weaviate README
- Bump version to 0.36.1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1665,7 +1665,7 @@ jobs:
           ls -la ~/.spindb/containers/weaviate/ 2>/dev/null || echo "No Weaviate containers directory"
           echo ""
           echo "=== Weaviate binary directory ==="
-          ls -la ~/.spindb/bin/ 2>/dev/null | grep -i weaviate || echo "No Weaviate binaries found"
+          ls -la ~/.spindb/bin/weaviate-* 2>/dev/null || echo "No Weaviate binaries found"
           echo ""
           echo "=== Weaviate log files ==="
           find ~/.spindb/containers/weaviate -name "*.log" -exec echo "--- {} ---" \; -exec cat {} \; 2>/dev/null || echo "No log files found"
